# spider

./: .gitignore  README.md  docker-compose.yml
databases/: docker-compose.yml
spider-backend/: Dockerfile  README.md  nginx-backend.conf  old_views.py  pyproject.toml  start.sh
spider-backend/chats/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
spider-backend/chats/tests/: test_chatmessages_view.py  test_chatroom_detail_view.py  test_chatroom_view.py  tests_chatmessages_model.py  tests_chatroom_model.py
spider-backend/common/: models.py  utils.py
spider-backend/config/: celery.py  settings.py  urls.py
spider-backend/llms/: apps.py  models.py  modules.py
spider-backend/llms/graphs/: builder.py  edges.py  nodes.py  test.ipynb  unit_test.ipynb
spider-backend/llms/tests/: tests_vectordb.py
spider-backend/llms/vectordb/: document_utils.py  embedding.ipynb  vectorstore.py
spider-backend/schemas/: __init__.py  models.py  structured_model.py
spider-backend/users/: models.py  serializers.py
spider-frontend/: Dockerfile  README.md  nginx-frontend.conf  package-lock.json  package.json
spider-frontend/public/: index.html
spider-frontend/src/: api.ts  index.tsx  router.tsx  types.d.ts
spider-frontend/src/components/: Footer.tsx  Header.tsx  Root.tsx
spider-frontend/src/components/modules/: ChatRoom.tsx  Message.tsx
spider-frontend/src/components/routes/: Chat.tsx  Main.tsx  NotFound.tsx
spider-frontend/src/components/screens/: ChatRoomFooter.tsx  ChatRoomHeader.tsx  ChatRoomList.tsx  MessageList.tsx  Sender.tsx
