[tool.poetry]
name = "spider-backend"
version = "0.1.0"
description = ""
authors = ["SIGIRACE <chickang9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
django = "^5.1.2"
mysqlclient = "^2.2.4"
django-environ = "^0.11.2"
django-cors-headers = "^4.5.0"
langchain = "^0.3.3"
langchain-core = "^0.3.10"
pydantic = "^2.9.2"
langchain-community = "^0.3.2"
langgraph = "^0.2.35"
drf-yasg = "^1.21.7"
langchain-milvus = "^0.1.5"
pymilvus = "^2.4.8"
langchain-text-splitters = "^0.3.0"
numpy = "1.26.0"
langchain-openai = "^0.2.2"
unstructured = {extras = ["pdf"], version = "^0.15.14"}
pymupdf = "^1.24.11"
langchain-nomic = "^0.1.3"
celery = {extras = ["redis"], version = "^5.4.0"}
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
